# osqf-archive

./: .gitattributes  .gitignore  LICENSE  NOTICE.md  README.md
R/: assoc.R  query.R
R/pipeline/: 00_helpers.R  01_scrape_manifest.R  02_extract_text.R  02b_ocr_apply.R  02c_revert_03_failures.R  03_llm_extract.R  04_render_pages.R  05_build_embeddings.R  (+12 more)
docs/: decision_matrix.md
notes/: 2009__christoph_leitner_and_paul_hofmarcher.md  2009__dale_rosenthal.md  2009__david_kane.md  2009__david_matteson.md  2009__david_ruppert.md  2009__diethelm_wuertz.md  2009__dirk_eddelbuettel.md  2009__eric_zivot.md  2009__guy_yollin.md  2009__hedibert_lopes.md  2009__joon_hui_yoon.md  2009__klaus_rheinberger.md  2009__patrick_burns.md  2009__roger_koenker.md  2009__xts_and_quantmod.md  2009__yohan_chalabi.md  2010__belianina.md  2010__boudt.md  2010__buckner_and_seligman.md  2010__carl.md  2010__carl_and_peterson_and_boudt.md  2010__christou_and_diez.md  2010__cornelissen.md  2010__eddelbuettel.md  2010__eddelbuettel_and_nguyen.md  2010__grossman.md  2010__guha.md  2010__kane_and_lewis.md  2010__koning.md  2010__liu.md  2010__long.md  2010__north.md  2010__opening_remarks.md  2010__pfaff.md  2010__plate.md  2010__ryan.md  2010__ryan_2.md  2010__seligman.md  2010__smith.md  2010__theussl.md  (+586 more)
osqf_mcp/: CLIENT_SETUP.md  pyproject.toml
osqf_mcp/deploy/: DEPLOY.md  downsample_pages.py  gen_token.sh  osqf-chat.service  osqf-mcp.service  setup.sh  update_data.sh
osqf_mcp/osqf_mcp/: __init__.py  __main__.py  chat.py  serve_http.py  server.py
wiki/: index.md  log.md  schema.md
(+790 files in other folders)
